[package]
name = "site-3ds"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
overflow-checks = false

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
# ctru-rs = { path = "./deps/ctru-rs/ctru-rs" }
ctru-rs = { git = "https://github.com/Rust3DS/ctru-rs" }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"

[build-dependencies]
walkdir = "2.5.0"
