[package]
name = "site-3ds"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
overflow-checks = false

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
ctru-rs = { git = "https://github.com/Rust3DS/ctru-rs" }
ctru-sys = { git = "https://github.com/Rust3DS/ctru-rs" }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"

[build-dependencies]
walkdir = "2.5.0"
flate2 = "1.0.35"
brotli = "7.0.0"
zstd = "0.13.2"
mime_guess = "2.0.5"

[dev-dependencies]
test-runner = { git = "https://github.com/Rust3DS/ctru-rs" }
